New README and changes on the web

--- a/web/site-plugin/src/components/site/Background.astro
+++ b/web/site-plugin/src/components/site/Background.astro
@@ -1,3 +1,5 @@
-<div class="fixed top-0 z-[-2] h-full w-full bg-neutral-950 bg-[radial-gradient(ellipse_80%_80%_at_50%_-20%,rgba(190,166,133,0.3),rgba(255,255,255,0))]">
-<slot/>
+<div
+  class="fixed top-0 -z-10 h-full w-full items-center px-5 py-24 [background:radial-gradient(125%_125%_at_50%_10%,#000_40%,#57534e_100%)]"
+>
+  <slot />
 </div>
