--- a/web/site-plugin/src/components/site/ComponentsList.astro
+++ b/web/site-plugin/src/components/site/ComponentsList.astro
@@ -1,32 +1,24 @@
 ---
 const PROJECTS = [
-{
+  {
     title: "Accordion",
-    description: `Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed et gravida
-        libero, vel porta nulla. Integer id massa non libero ultrices blandit.
-        Nulla facilisi.`,
+    description: `Discover, choose, and use the variants of the accordions.`,
     link: "/components-plugin/accordion",
   },
   {
-    title: "Alerts",
-    description: `Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed et gravida
-        libero, vel porta nulla. Integer id massa non libero ultrices blandit.
-        Nulla facilisi.`,
-    link: "/components-plugin/alerts",
+    title: "Alert",
+    description: `Discover, choose, and use the variants of the alerts.`,
+    link: "/components-plugin/alert",
   },
   {
-    title: "Badges",
-    description: `Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed et gravida
-        libero, vel porta nulla. Integer id massa non libero ultrices blandit.
-        `,
-    link: "/components-plugin/badges",
+    title: "Badge",
+    description: `Dhoose, choose, and use the badges.`,
+    link: "/components-plugin/badge",
   },
   {
-    title: "Buttons",
-    description: `Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed et gravida
-        libero, vel porta nulla. Integer id massa non libero ultrices blandit.
-        `,
-    link: "/components-plugin/buttons",
+    title: "Button",
+    description: `Discover, choose, and use the variants of the buttons.`,
+    link: "/components-plugin/button",
   },
 ];
 ---
@@ -34,9 +26,7 @@ const PROJECTS = [
 {
   PROJECTS.map(({ title, description, link }) => (
     <div class="pb-2 md:pr-2 lg:pr-2 ">
-      <a
-        href={link}
-      >
+      <a href={link}>
         <div class="border-2 border-stone-600 rounded-lg hover:border-stone-300 hover:opacity-85 shadow ">
           <div class="p-5">
             <h5 class="mb-2 text-xl font-bold tracking-tight">{title}</h5>
