--- a/web/site-plugin/src/components/site/Footer.astro
+++ b/web/site-plugin/src/components/site/Footer.astro
@@ -6,7 +6,7 @@
       <span>Get connected with us on social networks:</span>
     </div>
     <div class="flex justify-center">
-      <a href="#" class="hover:opacity-85"
+      <a href="https://github.com/AngelLisandroErazo/marca-components" target="_blank" class="hover:opacity-85"
         ><svg
           xmlns="http://www.w3.org/2000/svg"
           width="24"
@@ -65,7 +65,7 @@
         >
           Contact
         </h6>
-        <a href="mailto:angel.lisandro.erazo@gmail.com" <p class="mb-4 flex items-center justify-center md:justify-start">
+        <a href="mailto:angel.lisandro.erazo@gmail.com" class="mb-4 flex items-center justify-center md:justify-start">
           <span class="me-3">
             <img alt="email-icon" src="/email-icon.svg" />
           </span>
