--- a/web/site-plugin/src/components/site/Navbar.astro
+++ b/web/site-plugin/src/components/site/Navbar.astro
@@ -57,7 +57,7 @@ import Background from "./Background.astro"
               >Components</span
             >
           </a>
-          <a href="#" class="hover:opacity-85"
+          <a href="https://github.com/AngelLisandroErazo/marca-components" target="_blank" class="hover:opacity-85"
             ><svg
               xmlns="http://www.w3.org/2000/svg"
               width="24"
