--- a/web/site-plugin/src/pages/404.astro
+++ b/web/site-plugin/src/pages/404.astro
@@ -2,7 +2,7 @@
 import Background from "../components/site/Background.astro";
 ---
 
-<Background/>
+<Background>
   <div
     class="md:flex lg:flex md:flex-col lg:flex-col lg:items-center lg:justify-center md:items-center md:justify-center h-screen gap-5"
   >
@@ -19,3 +19,4 @@ import Background from "../components/site/Background.astro";
       >
     </div>
   </div>
+</Background>
