--- a/web/site-plugin/src/pages/components-list/components.astro
+++ b/web/site-plugin/src/pages/components-list/components.astro
@@ -11,11 +11,7 @@ import ComponentsList from "../../components/site/ComponentsList.astro";
     <Title title="Components" />
     <Content>
       <p>
-        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed et gravida
-        libero, vel porta nulla. Integer id massa non libero ultrices blandit.
-        Nulla facilisi. Phasellus tincidunt ullamcorper tortor id ultrices. Duis
-        varius purus in justo vehicula malesuada. Nullam lacinia euismod nisi,
-        at efficitur odio tempor non.
+        Here you have all the available components for you to use.
       </p>
     </Content>
     <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-2">
