--- a/web/site-plugin/src/pages/components-plugin/alert.astro
+++ b/web/site-plugin/src/pages/components-plugin/alert.astro
@@ -3,14 +3,14 @@ import Layout from "../../layouts/Layout.astro";
 import Title from "../../components/site/Title.astro";
 import Content from "../../components/site/Content.astro";
 import Sidebar from "../../components/site/Sidebar.astro";
-import ButtonsComponent from "../../components/components-plugin/ButtonsComponent.astro";
+import AlertsComponent from "../../components/components-plugin/AlertComponent.astro";
 ---
 
-<Layout title="Buttons">
+<Layout title="Alert">
   <Sidebar>
-    <Title title="Buttons" />
+    <Title title="Alert" />
     <Content>
-      <ButtonsComponent/>
+      <AlertsComponent/>
     </Content>
   </Sidebar>
 </Layout>
