--- a/web/site-plugin/src/pages/components-plugin/badge.astro
+++ b/web/site-plugin/src/pages/components-plugin/badge.astro
@@ -3,14 +3,14 @@ import Layout from "../../layouts/Layout.astro";
 import Title from "../../components/site/Title.astro";
 import Content from "../../components/site/Content.astro";
 import Sidebar from "../../components/site/Sidebar.astro";
-import AlertsComponent from "../../components/components-plugin/AlertsComponent.astro";
+import BadgesComponent from "../../components/components-plugin/BadgeComponent.astro";
 ---
 
-<Layout title="Alerts">
+<Layout title="Badge">
   <Sidebar>
-    <Title title="Alerts" />
+    <Title title="Badge" />
     <Content>
-      <AlertsComponent/>
+      <BadgesComponent/>
     </Content>
   </Sidebar>
 </Layout>
