--- a/web/site-plugin/src/pages/components-plugin/button.astro
+++ b/web/site-plugin/src/pages/components-plugin/button.astro
@@ -3,14 +3,14 @@ import Layout from "../../layouts/Layout.astro";
 import Title from "../../components/site/Title.astro";
 import Content from "../../components/site/Content.astro";
 import Sidebar from "../../components/site/Sidebar.astro";
-import BadgesComponent from "../../components/components-plugin/BadgesComponent.astro";
+import ButtonsComponent from "../../components/components-plugin/ButtonComponent.astro";
 ---
 
-<Layout title="Badges">
+<Layout title="Button">
   <Sidebar>
-    <Title title="Badges" />
+    <Title title="Button" />
     <Content>
-      <BadgesComponent/>
+      <ButtonsComponent/>
     </Content>
   </Sidebar>
 </Layout>
