--- a/web/site-plugin/src/pages/index.astro
+++ b/web/site-plugin/src/pages/index.astro
@@ -15,7 +15,7 @@ import Footer from "../components/site/Footer.astro"
         >
           <h1 class="text-8xl font-bold text-gray-200">Marca</h1>
           <p class="text-3xl text-white text-center">
-            <span class="text-blue-500">TailwindCSS</span> components
+            <span class="text-blue-500">Tailwind CSS</span> components
           </p>
           <div class="m-8">
             <a
@@ -27,12 +27,12 @@ import Footer from "../components/site/Footer.astro"
           </div>
         </div>
 
-        <div class="md:w-1/2 lg:w-1/2">
-          <img src="/banner-img.webp" alt="banner" />
+        <div class="flex items-center md:w-1/2 lg:w-1/2">
+          <img src="/699shots_so.webp" alt="banner" />
         </div>
       </div>
 
-      <div class="text-center">
+      <div>
         <Title title="Components" />
         <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-2 m-5">
           <ComponentsList />
