--- a/web/site-plugin/src/components/components-plugin/AlertComponent.astro
+++ b/web/site-plugin/src/components/components-plugin/AlertComponent.astro
@@ -50,28 +50,28 @@ import Code from "../site/Code.astro";
 <div class="flex flex-col items-center">
   <div class="flex flex-col gap-2 w-full">
     <div class="alert-alternative-green" role="alert">
-      A simple green alert — check it out!
+      A alternative green alert — check it out!
     </div>
     <div class="alert-alternative-red" role="alert">
-      A simple green alert — check it out!
+      A alternative green alert — check it out!
     </div>
     <div class="alert-alternative-orange" role="alert">
-      A simple green alert — check it out!
+      A alternative green alert — check it out!
     </div>
     <div class="alert-alternative-yellow" role="alert">
-      A simple green alert — check it out!
+      A alternative green alert — check it out!
     </div>
     <div class="alert-alternative-blue" role="alert">
-      A simple green alert — check it out!
+      A alternative green alert — check it out!
     </div>
     <div class="alert-alternative-purple" role="alert">
-      A simple green alert — check it out!
+      A alternative green alert — check it out!
     </div>
     <div class="alert-alternative-gray" role="alert">
-      A simple green alert — check it out!
+      A alternative green alert — check it out!
     </div>
     <div class="alert-alternative-light" role="alert">
-      A simple green alert — check it out!
+      A alternative green alert — check it out!
     </div>
   </div>
   <Code
