--- a/web/site-plugin/src/components/site/ComponentsList.astro
+++ b/web/site-plugin/src/components/site/ComponentsList.astro
@@ -20,6 +20,11 @@ const PROJECTS = [
     description: `Discover, choose, and use the variants of the buttons.`,
     link: "/components-plugin/button",
   },
+  {
+    title: "Card",
+    description: `Discover, choose, and use the variants of the card.`,
+    link: "/components-plugin/card",
+  },
 ];
 ---
 
