--- a/web/site-plugin/src/components/site/Sidebar.astro
+++ b/web/site-plugin/src/components/site/Sidebar.astro
@@ -116,6 +116,11 @@ import Background from "./Background.astro"
           <span class="ms-10">Button</span>
         </a>
       </li>
+      <li>
+        <a href="/components-plugin/card" class="flex items-center p-2 rounded-lg hover:bg-stone-600">
+          <span class="ms-10">Card</span>
+        </a>
+      </li>
     </ul>
   </div>
 </aside>
