--- a/web/site-plugin/src/pages/index.astro
+++ b/web/site-plugin/src/pages/index.astro
@@ -28,7 +28,7 @@ import Footer from "../components/site/Footer.astro"
         </div>
 
         <div class="flex items-center md:w-1/2 lg:w-1/2">
-          <img src="/699shots_so.webp" alt="banner" />
+          <img src="/examples-img.webp" alt="banner" />
         </div>
       </div>
 
