Correction of information

--- a/web/site-plugin/src/components/components-plugin/AlertComponent.astro
+++ b/web/site-plugin/src/components/components-plugin/AlertComponent.astro
@@ -53,37 +53,37 @@ import Code from "../site/Code.astro";
       A alternative green alert — check it out!
     </div>
     <div class="alert-alternative-red" role="alert">
-      A alternative green alert — check it out!
+      A alternative red alert — check it out!
     </div>
     <div class="alert-alternative-orange" role="alert">
-      A alternative green alert — check it out!
+      A alternative orange alert — check it out!
     </div>
     <div class="alert-alternative-yellow" role="alert">
-      A alternative green alert — check it out!
+      A alternative yellow alert — check it out!
     </div>
     <div class="alert-alternative-blue" role="alert">
-      A alternative green alert — check it out!
+      A alternative blue alert — check it out!
     </div>
     <div class="alert-alternative-purple" role="alert">
-      A alternative green alert — check it out!
+      A alternative purple alert — check it out!
     </div>
     <div class="alert-alternative-gray" role="alert">
-      A alternative green alert — check it out!
+      A alternative gray alert — check it out!
     </div>
     <div class="alert-alternative-light" role="alert">
-      A alternative green alert — check it out!
+      A alternative light alert — check it out!
     </div>
   </div>
   <Code
     code={`
-      <div class="alert-alternative-green" role="alert">A simple green alert — check it out!</div>
-      <div class="alert-alternative-red" role="alert">A simple green alert — check it out!</div>
-      <div class="alert-alternative-orange" role="alert">A simple green alert — check it out!</div>
-      <div class="alert-alternative-yellow" role="alert">A simple green alert — check it out!</div>
-      <div class="alert-alternative-blue" role="alert">A simple green alert — check it out!</div>
-      <div class="alert-alternative-purple" role="alert">A simple green alert — check it out!</div>
-      <div class="alert-alternative-gray" role="alert">A simple green alert — check it out!</div>
-      <div class="alert-alternative-light" role="alert">A simple green alert — check it out!</div>
+      <div class="alert-alternative-green" role="alert">A alternative green alert — check it out!</div>
+      <div class="alert-alternative-red" role="alert">A alternative red alert — check it out!</div>
+      <div class="alert-alternative-orange" role="alert">A alternative orange alert — check it out!</div>
+      <div class="alert-alternative-yellow" role="alert">A alternative yellow alert — check it out!</div>
+      <div class="alert-alternative-blue" role="alert">A alternative blue alert — check it out!</div>
+      <div class="alert-alternative-purple" role="alert">A alternative purple alert — check it out!</div>
+      <div class="alert-alternative-gray" role="alert">A alternative gray alert — check it out!</div>
+      <div class="alert-alternative-light" role="alert">A alternative light alert — check it out!</div>
         `}
   />
 </div>
