--- a/web/site-plugin/src/components/components-plugin/AccordionComponent.astro
+++ b/web/site-plugin/src/components/components-plugin/AccordionComponent.astro
@@ -7,7 +7,7 @@ import { Code as BoxCode } from "astro:components";
   <p class="text-lg text-start">
     Use the "open" attribute in element ditails to keep the accordion open.
   </p>
-  <p class="text-lg font-semibold text-start mt-2">Example:</p>
+  <p class="text-xl font-semibold mt-5">Example:</p>
   <pre
     class="text-center rounded bg-code">
   <BoxCode code={`<details class="accordion-detail" name="first_accordion" open></details>`} wrap={true} lang="html" />
