--- a/web/site-plugin/src/components/components-plugin/ButtonComponent.astro
+++ b/web/site-plugin/src/components/components-plugin/ButtonComponent.astro
@@ -5,7 +5,7 @@ import Code from "../site/Code.astro";
 <div class="text-center m-5">
   <h2 class="text-2xl font-semibold">Colors</h2>
 </div>
-<div class="md:flex lg:flex md:justify-center md:items-center lg:justify-center lg:items-center md:gap-x-2 lg:gap-x-2">
+<div class="grid grid-cols-2 gap-2 md:flex lg:flex md:justify-center md:items-center lg:justify-center lg:items-center md:gap-x-2 lg:gap-x-2">
   <button class="btn-green"> Green </button>
   <button class="btn-red"> Red </button>
   <button class="btn-orange"> Orange </button>
@@ -33,7 +33,7 @@ import Code from "../site/Code.astro";
 <div class="text-center m-5">
   <h2 class="text-2xl font-semibold">Hover</h2>
 </div>
-<div class="md:flex lg:flex md:justify-center md:items-center lg:justify-center lg:items-center md:gap-x-2 lg:gap-x-2">
+<div class="grid grid-cols-2 gap-2 md:flex lg:flex md:justify-center md:items-center lg:justify-center lg:items-center md:gap-x-2 lg:gap-x-2">
   <button class="btn-green-h"> Green </button>
   <button class="btn-red-h"> Red </button>
   <button class="btn-orange-h"> Orange </button>
@@ -61,7 +61,7 @@ import Code from "../site/Code.astro";
 <div class="text-center m-5">
   <h2 class="text-2xl font-semibold">Outline</h2>
 </div>
-<div class="md:flex lg:flex md:justify-center md:items-center lg:justify-center lg:items-center md:gap-x-2 lg:gap-x-2">
+<div class="grid grid-cols-2 gap-2 md:flex lg:flex md:justify-center md:items-center lg:justify-center lg:items-center md:gap-x-2 lg:gap-x-2">
   <button class="btn-outline-green"> Green </button>
   <button class="btn-outline-red"> Red </button>
   <button class="btn-outline-orange"> Orange </button>
@@ -89,7 +89,7 @@ import Code from "../site/Code.astro";
 <div class="text-center m-5">
   <h2 class="text-2xl font-semibold">Focus</h2>
 </div>
-<div class="md:flex lg:flex md:justify-center md:items-center lg:justify-center lg:items-center md:gap-x-2 lg:gap-x-2">
+<div class="grid grid-cols-2 gap-2 md:flex lg:flex md:justify-center md:items-center lg:justify-center lg:items-center md:gap-x-2 lg:gap-x-2">
   <button class="btn-focus-green"> Green </button>
   <button class="btn-focus-red"> Red </button>
   <button class="btn-focus-orange"> Orange </button>
@@ -117,7 +117,7 @@ import Code from "../site/Code.astro";
 <div class="text-center m-5">
   <h2 class="text-2xl font-semibold">Disabled</h2>
 </div>
-<div class="md:flex lg:flex md:justify-center md:items-center lg:justify-center lg:items-center md:gap-x-2 lg:gap-x-2">
+<div class="grid grid-cols-2 gap-2 md:flex lg:flex md:justify-center md:items-center lg:justify-center lg:items-center md:gap-x-2 lg:gap-x-2">
   <button class="btn-green" disabled> Green </button>
   <button class="btn-red" disabled> Red </button>
   <button class="btn-orange-h" disabled> Orange </button>
