--- a/web/site-plugin/src/components/components-plugin/CardComponent.astro
+++ b/web/site-plugin/src/components/components-plugin/CardComponent.astro
@@ -11,6 +11,7 @@ import LinkIcon from "../../img/LinkIcon.astro";
     You can change the border color depending on the one you want, just change
     the 'card-content-color'.
   </p>
+  <p class="font-semibold text-lg mt-2">Colors:</p>
   <ul class="ml-8 list-disc">
     <li>
       <p class="text-green-600">card-content-green</p>
@@ -37,6 +38,7 @@ import LinkIcon from "../../img/LinkIcon.astro";
       <p class="text-neutral-300">card-content-light</p>
     </li>
   </ul>
+  <p class="font-semibold text-xl mt-5">Example:</p>
 </div>
 <div
   class="md:flex lg:flex md:justify-center md:items-center lg:justify-center lg:items-center md:gap-x-2 lg:gap-x-2"
@@ -83,6 +85,7 @@ import LinkIcon from "../../img/LinkIcon.astro";
     This card is similar to the simple, but the title can be highlighted with
     color by changing the 'card-head-color'.
   </p>
+  <p class="font-semibold text-lg mt-2">Colors:</p>
   <ul class="ml-8 list-disc">
     <li>
       <p class="text-green-600">card-head-green</p>
@@ -109,6 +112,7 @@ import LinkIcon from "../../img/LinkIcon.astro";
       <p class="text-neutral-300">card-head-light</p>
     </li>
   </ul>
+  <p class="font-semibold text-xl mt-5">Example:</p>
 </div>
 <div
   class="md:flex lg:flex md:justify-center md:items-center lg:justify-center lg:items-center md:gap-x-2 lg:gap-x-2"
@@ -153,8 +157,9 @@ import LinkIcon from "../../img/LinkIcon.astro";
 <div class="m-2">
   <p>
     You can also use this component with an image, like the previous ones you
-    can also change the border color.
+    can also change the border color, change 'card-color'.
   </p>
+  <p class="font-semibold text-xl mt-5">Example:</p>
 </div>
 <div
   class="md:flex lg:flex md:justify-center md:items-center lg:justify-center lg:items-center md:gap-x-2 lg:gap-x-2"
@@ -203,7 +208,7 @@ import LinkIcon from "../../img/LinkIcon.astro";
   />
 </div>
 <div class="flex gap-2 m-2">
-  <span>The image used is by Javier Balseiro. You can find the image at: </span>
+  <span>Photo by Javier Balseiro. You can find the photo at: </span>
   <div class="flex gap-2">
     <div
       class="flex items-baseline gap-2 text-blue-600 hover:text-blue-700 hover:underline fill-blue-600 hover:fill-blue-700"
@@ -211,7 +216,7 @@ import LinkIcon from "../../img/LinkIcon.astro";
       <a
         href="https://www.pexels.com/es-es/foto/mar-amanecer-paisaje-naturaleza-19960599/"
         target="_blank"
-        class="">used image</a
+        class="">sunrise</a
       >
       <span class=""><LinkIcon /></span>
     </div>
