--- a/web/site-plugin/src/components/site/ComponentsList.astro
+++ b/web/site-plugin/src/components/site/ComponentsList.astro
@@ -1,5 +1,10 @@
 ---
 const PROJECTS = [
+{
+    title: "Avatar",
+    description: `Discover, choose, and use the variants of the avatar.`,
+    link: "/components-plugin/avatar",
+  },
   {
     title: "Accordion",
     description: `Discover, choose, and use the variants of the accordions.`,
@@ -22,8 +27,13 @@ const PROJECTS = [
   },
   {
     title: "Card",
-    description: `Discover, choose, and use the variants of the card.`,
+    description: `Discover, choose, and use the variants of the cards.`,
     link: "/components-plugin/card",
+  },
+  {
+    title: "Table",
+    description: `Discover, choose, and use the variants of the tables.`,
+    link: "/components-plugin/table",
   },
 ];
 ---
