--- a/web/site-plugin/src/components/site/Sidebar.astro
+++ b/web/site-plugin/src/components/site/Sidebar.astro
@@ -45,7 +45,7 @@ import Background from "./Background.astro"
       </div>
       <div class="flex items-center">
         <div class="flex items-center ms-3 gap-2">
-          <a href="https://github.com/AngelLisandroErazo/marca-components" target="_blank" class="hover:opacity-85">
+          <a href="https://github.com/angellisandroerazo/marca-components" target="_blank" class="hover:opacity-85">
             <svg
               xmlns="http://www.w3.org/2000/svg"
               width="24"
@@ -97,6 +97,11 @@ import Background from "./Background.astro"
         </div>
       </li>
       <li>
+        <a href="/components-plugin/avatar" class="flex items-center p-2 rounded-lg hover:bg-stone-600">
+          <span class="ms-10">Avatar</span>
+        </a>
+      </li>
+      <li>
         <a href="/components-plugin/accordion" class="flex items-center p-2 rounded-lg hover:bg-stone-600">
           <span class="ms-10">Accordion</span>
         </a>
@@ -119,6 +124,11 @@ import Background from "./Background.astro"
       <li>
         <a href="/components-plugin/card" class="flex items-center p-2 rounded-lg hover:bg-stone-600">
           <span class="ms-10">Card</span>
+        </a>
+      </li>
+      <li>
+        <a href="/components-plugin/table" class="flex items-center p-2 rounded-lg hover:bg-stone-600">
+          <span class="ms-10">Table</span>
         </a>
       </li>
     </ul>
