--- a/web/site-plugin/src/components/components-plugin/BadgeComponent.astro
+++ b/web/site-plugin/src/components/components-plugin/BadgeComponent.astro
@@ -5,7 +5,7 @@ import Code from "../site/Code.astro";
 <div class="text-center m-5">
   <h2 class="text-2xl font-semibold">Default</h2>
 </div>
-<div class="md:flex lg:flex md:justify-center md:items-center lg:justify-center lg:items-center md:gap-x-2 lg:gap-x-2">
+<div class="grid grid-cols-2 gap-2 md:flex lg:flex md:justify-center md:items-center lg:justify-center lg:items-center md:gap-x-2 lg:gap-x-2">
     <span class="badge-green"> Badge green </span>
     <span class="badge-red"> Badge red </span>
     <span class="badge-orange"> Badge orange </span>
