--- a/web/site-plugin/src/layouts/Layout.astro
+++ b/web/site-plugin/src/layouts/Layout.astro
@@ -7,6 +7,7 @@ const { title } = Astro.props;
 
 import "../style/global.css";
 import '@fontsource/montserrat/500.css';
+import  SpeedInsights  from "@vercel/speed-insights/astro"
 ---
 
 <!doctype html>
@@ -25,6 +26,7 @@ import '@fontsource/montserrat/500.css';
   </head>
   <body>
     <slot />
+    <SpeedInsights/>
     <script
       src="https://cdnjs.cloudflare.com/ajax/libs/flowbite/2.3.0/flowbite.min.js"
     ></script>
