--- a/web/site-plugin/src/components/site/Navbar.astro
+++ b/web/site-plugin/src/components/site/Navbar.astro
@@ -57,6 +57,12 @@ import Background from "./Background.astro"
               >Components</span
             >
           </a>
+          <a href="/marca-icons/icons" class="ms-2 md:me-2 md:flex lg:flex hidden">
+            <span
+              class="self-center font-semibold whitespace-nowrap hover:opacity-85"
+              >Icons</span
+            >
+          </a>
           <a href="https://github.com/angellisandroerazo/marca-components" target="_blank" class="hover:opacity-85"
             ><svg
               xmlns="http://www.w3.org/2000/svg"
@@ -100,6 +106,14 @@ import Background from "./Background.astro"
           <span
             class="ms-3"
             >Components</span
+          >
+        </a>
+      </li>
+      <li>
+        <a href="/marca-icons/icons" class="flex items-center p-2 rounded-lg hover:bg-stone-600">
+          <span
+            class="ms-3"
+            >Icons</span
           >
         </a>
       </li>
